test/corpus/expression_term.txt
====
simple expression_term
====

break;
continue;
();
(a, 1);
(a: A);

---
(source_file
  (break_expression)
  (continue_expression)
  (unit_expression)
  (expression_list
    (name_expression
      (module_access
        (identifier)))
    (num_literal))
  (annotate_expression
    exp: (name_expression
      (module_access
        (identifier)))
    ty: (apply_type
      (module_access
        (identifier)))))
