test/corpus/module_definition.txt
====
module_definition
====

module LBR {
    use 0x0::Transaction;
    struct T { }
    use 0x0::Libra;
    public fun initialize() {
    }
}

----
(source_file
  (module_definition
    name: (module_identifier)
    body: (module_body
      (use_decl
          address: (address_literal)
          module: (module_identifier))
      (struct_definition
        name: (struct_identifier)
        fields: (struct_def_fields))
      (use_decl
          address: (address_literal)
          module: (module_identifier))
      (usual_function_definition
        name: (function_identifier)
        params: (func_params)
        body: (block)))))
