test/corpus/spec/spec_block_member.txt
====
spec_block_member
====

spec {
  invariant update a + 1;
  assert 1==1;
  ensures a > 1;
  include a;
  apply a to Hello*World<T>;
  apply b to World* except Worlda*, Worldbc;
  pragma a=1, b=2;
  global b: u8;
  define spec_func<A>(a: A): C {}
  native define spec_native_func(): C;
};

----

(source_file
  (spec_block
    body: (spec_body
      (spec_invariant
        kind: (condition_kind)
        modifier: (invariant_modifier)
        exp: (binary_expression
          lhs: (name_expression
            access: (module_access
              member: (identifier)))
          operator: (binary_operator)
          rhs: (num_literal)))
      (spec_condition
        kind: (condition_kind)
        exp: (binary_expression
          lhs: (num_literal)
          operator: (binary_operator)
          rhs: (num_literal)))
      (spec_condition
        kind: (condition_kind)
        exp: (binary_expression
          lhs: (name_expression
            access: (module_access
              member: (identifier)))
          operator: (binary_operator)
          rhs: (num_literal)))
      (spec_include
        (name_expression
          access: (module_access
            member: (identifier))))
      (spec_apply
        exp: (name_expression
          access: (module_access
            member: (identifier)))
        (spec_apply_pattern
          name_pattern: (spec_apply_name_pattern)
          type_parameter: (type_parameter
            name: (type_parameter_identifier))))
      (spec_apply
        exp: (name_expression
          access: (module_access
            member: (identifier)))
        (spec_apply_pattern
          name_pattern: (spec_apply_name_pattern))
        (spec_apply_pattern
          name_pattern: (spec_apply_name_pattern))
        (spec_apply_pattern
          name_pattern: (spec_apply_name_pattern)))
      (spec_pragma
        (spec_property
          (identifier)
          (num_literal))
        (spec_property
          (identifier)
          (num_literal)))
      (spec_variable
        name: (identifier)
        type: (apply_type
          (module_access
            member: (identifier))))
      (usual_spec_function
        name: (function_identifier)
        type_parameter: (type_parameter
          name: (type_parameter_identifier))
        params: (func_params
          (function_parameter
            name: (variable_identifier)
            type: (apply_type
              (module_access
                member: (identifier)))))
        return_type: (apply_type
          (module_access
            member: (identifier)))
        body: (block))
      (native_spec_function
        name: (function_identifier)
        params: (func_params)
        return_type: (apply_type
          (module_access
            member: (identifier)))))))
