test/corpus/struct_definition.txt
====
struct_definition
====

resource struct EventHandle<T: copyable> {
    counter: u64,
    guid: vector<u8>,
}


----
(source_file
  (struct_definition
    name: (struct_identifier)
    type_parameters: (type_parameters
      (type_parameter
        (type_parameter_identifier)))
    fields: (struct_def_fields
      (field_annotation
        field: (field_identifier)
        type: (apply_type
          (module_access
            (identifier))))
      (field_annotation
        field: (field_identifier)
        type: (apply_type
          (module_access
            (identifier))
          type_arguments: (type_arguments
            (apply_type
              (module_access
                (identifier)))))))))


====
native_struct_definition
====

native struct Event<T>;

----
(source_file
  (native_struct_definition
    name: (struct_identifier)
    type_parameters: (type_parameters
      (type_parameter
        (type_parameter_identifier)))))
